--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
     background-color: #2095F2;
     background: #2095F2;
 }
+.color-default{
+    color: #5d5d55;
+}
 main#login-main{
     height: 100vh;
     width: 100%;
