--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,44 @@
-.bg-default{
+.bg-default {
     background-color: #2095F2;
     background: #2095F2;
 }
-.color-default{
+
+.color-default {
     color: #5d5d55;
 }
-main#login-main{
+
+main#login-main {
     height: 100vh;
     width: 100%;
     overflow: hidden;
 }
+
 .login-form-frame,
-.login-image-frame{
+.login-image-frame {
     height: 100vh;
 }
-.login-form-frame{
+
+.login-form-frame {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.login-form-frame .container{
+
+.login-form-frame .container {
     width: 70%;
 }
-.login-form-frame form{
+
+.login-form-frame form {
     width: 100% !important;
     margin: 0;
     padding: 0;
 }
-#button-login{
+
+#button-login {
     margin-top: 30px;
 }
-.login-image-frame{
+
+.login-image-frame {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,11 +48,17 @@ main#login-main{
     background-position: center;
 }
 
+.form-check-input.is-valid~.form-check-label#label-ingat-saya,
+.was-validated .form-check-input:valid~.form-check-label#label-ingat-saya {
+    color: #212529;
+}
+
 @media (max-width: 768px) {
-    .login-form-frame .container{
+    .login-form-frame .container {
         width: 90%;
     }
-    .login-image-frame{
+
+    .login-image-frame {
         display: none;
     }
 }
