--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+*{
+    text-decoration: none;
+}
 .bg-default{
     background-color: #2095F2;
     background: #2095F2;
@@ -39,6 +42,161 @@ main#login-main{
     background-size: cover;
     background-position: center;
 }
+
+/* start of pegawai page */
+.navbar {
+    padding: 15px 10px;
+    background: #fff;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+
+/* sidebar navigation */
+.wrapper {
+    display: flex;
+    width: 100%;
+}
+
+#sidebar {
+    width: 250px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    z-index: 999;
+    background: white;
+    color: #fff;
+    transition: all 0.3s;
+    box-shadow: 0px 0px 56.2937px rgba(0, 0, 0, 0.1);
+}
+
+#sidebar.active {
+    margin-left: -250px;
+}
+
+#sidebar .sidebar-header {
+    width: 100%;
+    height: 125px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#sidebar .sidebar-header img{
+    width: 80%;
+}
+
+#sidebar ul p {
+    color: #fff;
+    padding: 10px;
+}
+
+#sidebar ul li a {
+    padding: 15px 20px;
+    font-size: 1.1em;
+    display: flex;
+    text-decoration: none;
+    color: #A4A6B3;
+}
+#sidebar ul li a i{
+    margin-right: 10px;
+}
+
+#sidebar ul li a:hover {
+    color: #5d5d5d;
+    background: rgba(159, 162, 180, .2);
+}
+#sidebar ul li.active {
+    border-left: 5px solid #b3beff;
+}
+#sidebar ul li.active>a,
+a[aria-expanded="true"] {
+    color: #5d5d5d;
+    background: rgba(159, 162, 180, .2);
+}
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+.dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: #6d7fcc;
+}
+
+a.article,
+a.article:hover {
+    background: #6d7fcc !important;
+    color: #fff !important;
+}
+/* sidebar navigation */
+
+/* content */
+#content {
+    width: calc(100% - 250px);
+    /* padding: 100px 33px 33px 33px; */
+    min-height: 100vh;
+    transition: all 0.3s;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+#content.active {
+    width: 100%;
+}
+
+#content nav{
+    width: 100%;
+    height: 60px;
+    position: sticky;
+    left: 0;
+    top: 0;
+}
+
+#content .wrapper{
+    width: 100%;
+    padding: 33px;
+}
+/* content */
+
+/* mediaqueries */
+@media (max-width: 768px) {
+    #sidebar {
+        margin-left: -250px;
+    }
+    #sidebar.active {
+        margin-left: 0;
+    }
+    #content {
+        width: 100%;
+    }
+    #content.active {
+        width: calc(100% - 250px);
+    }
+    #sidebarCollapse span {
+        display: none;
+    }
+}
+/* mediaqueries */
+
+/* end of pegawai page */
 
 @media (max-width: 768px) {
     .login-form-frame .container{
