--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 *{
     text-decoration: none;
 }
+.flex-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .bg-default{
     background-color: #2095F2;
     background: #2095F2;
@@ -68,6 +73,7 @@ main#login-main{
 #sidebar {
     width: 250px;
     position: fixed;
+    z-index: 3;
     top: 0;
     left: 0;
     height: 100vh;
@@ -104,6 +110,7 @@ main#login-main{
     display: flex;
     text-decoration: none;
     color: #A4A6B3;
+    transition: all .5s;
 }
 #sidebar ul li a i{
     margin-right: 10px;
@@ -139,12 +146,6 @@ ul ul a {
     padding-left: 30px !important;
     background: #6d7fcc;
 }
-
-a.article,
-a.article:hover {
-    background: #6d7fcc !important;
-    color: #fff !important;
-}
 /* sidebar navigation */
 
 /* content */
@@ -168,6 +169,79 @@ a.article:hover {
     position: sticky;
     left: 0;
     top: 0;
+    background: white;
+    z-index: 2;
+    box-shadow: 0px 0px 56.2937px rgba(0, 0, 0, 0.1);
+    display: table;
+}
+
+#content nav .btn-menu{
+    width: 60px;
+    height: 60px;
+}
+#content nav .btn-menu i{
+    color: #5d5d5d;
+    cursor: pointer;
+}
+#content nav .float-right .notification-frame{
+    position: relative;
+}
+#content nav .float-right .notification-count{
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    background-color: #2095F2;
+    border-radius: 50%;
+    right: 5px;
+    top: 15px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+}
+#content nav .float-right .notification-count span{
+    font-size: .6rem;
+    color: white;
+}
+#content nav .float-right .user-frame{
+    /* width: 200px; */
+    height: 60px;
+    margin-left: 20px;
+    margin-right: 10px;
+}
+#content nav .float-right .user-image-frame{
+    width: 60px;
+    height: 60px;
+    overflow: hidden;
+    float: right;
+}
+#content nav .float-right .user-image-frame img{
+    width: 70%;
+    height: 70%;
+    border-radius: 50%;
+}
+#content nav .float-right .user-detail-frame{
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-right: 10px;
+}
+#content nav .float-right .user-detail-frame h5{
+    font-size: 1rem;
+    margin-bottom: 0px;
+    text-align: right;
+}
+#content nav .float-right .user-detail-frame p{
+    font-size: .8rem;
+    margin-bottom: 0px;
+    text-align: right;
+}
+#content nav .float-right .menu-right{
+    width: 40px;
+    height: 60px;
+}
+#content nav .float-right .menu-right i{
+    color: #5d5d5d;
+    cursor: pointer;
 }
 
 #content .wrapper{
