--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,7 @@ ul ul a {
     width: 100%;
 }
 
-#content nav{
+#content .nav-menu{
     width: 100%;
     height: 60px;
     position: sticky;
@@ -175,18 +175,18 @@ ul ul a {
     display: table;
 }
 
-#content nav .btn-menu{
+#content .nav-menu .btn-menu{
     width: 60px;
     height: 60px;
 }
-#content nav .btn-menu i{
+#content .nav-menu .btn-menu i{
     color: #5d5d5d;
     cursor: pointer;
 }
-#content nav .float-right .notification-frame{
+#content .nav-menu .float-right .notification-frame{
     position: relative;
 }
-#content nav .float-right .notification-count{
+#content .nav-menu .float-right .notification-count{
     position: absolute;
     width: 15px;
     height: 15px;
@@ -196,28 +196,28 @@ ul ul a {
     top: 15px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
-#content nav .float-right .notification-count span{
+#content .nav-menu .float-right .notification-count span{
     font-size: .6rem;
     color: white;
 }
-#content nav .float-right .user-frame{
+#content .nav-menu .float-right .user-frame{
     /* width: 200px; */
     height: 60px;
     margin-left: 20px;
     margin-right: 10px;
 }
-#content nav .float-right .user-image-frame{
+#content .nav-menu .float-right .user-image-frame{
     width: 60px;
     height: 60px;
     overflow: hidden;
     float: right;
 }
-#content nav .float-right .user-image-frame img{
+#content .nav-menu .float-right .user-image-frame img{
     width: 70%;
     height: 70%;
     border-radius: 50%;
 }
-#content nav .float-right .user-detail-frame{
+#content .nav-menu .float-right .user-detail-frame{
     height: 100%;
     overflow: hidden;
     display: flex;
@@ -225,21 +225,21 @@ ul ul a {
     justify-content: center;
     padding-right: 10px;
 }
-#content nav .float-right .user-detail-frame h5{
+#content .nav-menu .float-right .user-detail-frame h5{
     font-size: 1rem;
     margin-bottom: 0px;
     text-align: right;
 }
-#content nav .float-right .user-detail-frame p{
+#content .nav-menu .float-right .user-detail-frame p{
     font-size: .8rem;
     margin-bottom: 0px;
     text-align: right;
 }
-#content nav .float-right .menu-right{
+#content .nav-menu .float-right .menu-right{
     width: 40px;
     height: 60px;
 }
-#content nav .float-right .menu-right i{
+#content .nav-menu .float-right .menu-right i{
     color: #5d5d5d;
     cursor: pointer;
 }
@@ -247,6 +247,47 @@ ul ul a {
 #content .wrapper{
     width: 100%;
     padding: 33px;
+    display: block;
+}
+#content .wrapper .header-content{
+    width: 100%;
+    margin-bottom: 33px;
+}
+#content .wrapper .header-content .breadcrumb{
+    background-color: unset;
+    padding: .75rem 0rem;
+    margin-bottom: unset;
+}
+#content .wrapper .header-content .button-add-frame{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+#content .wrapper .header-content .button-add-frame button{
+    font-size: 1.1rem;
+    padding: .5rem 1.5rem;
+}
+#content .wrapper .card{
+    padding: 33px;
+    border: unset;
+    border-radius: 5px;
+    box-shadow: 0px 0px 56.2937px rgba(0, 0, 0, 0.1);
+}
+#content .wrapper .card table .action-frame{
+    
+}
+#content .wrapper .card table .action-frame button{
+    width: 35px;
+    height: 35px;
+    padding: unset;
+    margin-right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float: left;
+}
+#content .wrapper .card table .action-frame button i{
+    font-size: 1.2rem;
 }
 /* content */
 
